--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="https://www.dropbox.com/scl/fi/q4pgpe5ukia0q6v4oqh3n/MonkeyMedia.png?rlkey=3zf7zuxrfqn2r5vogvy1fqazq&dl=1" />
+    <link rel="icon" type="image/png" href="https://searchbar-images.s3.ap-southeast-2.amazonaws.com/MonkeyMedia.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Haileybury Video Search</title>
   </head>
